<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbChangePassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#7E30E6"
        android:elevation="4dp"
        app:title="@string/change_password"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:background="#EDECEC"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:text="@string/please_update_password"/>
    <View
        android:layout_width="match_parent"
        android:background="#EDECEC"
        android:layout_height="1dp"/>
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/edt_password"
        android:background="@android:color/transparent"
        android:padding="9dp"
        />
    <View
        android:layout_width="match_parent"
        android:background="#EDECEC"
        android:layout_height="1dp"/>
    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:background="@android:color/transparent"
        android:padding="9dp"
        />
    <View
        android:layout_width="match_parent"
        android:background="#E4E4E4"
        android:layout_height="1dp"/>
    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/confirm_password"
        android:background="@android:color/transparent"
        android:padding="9dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#EDECEC"
        android:orientation="vertical"
        android:gravity="center|top">
        <Button
            android:id="@+id/btnUpdatePassword"
            android:layout_margin="15dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/button_custom"
            android:text="@string/update"/>
    </LinearLayout>


</LinearLayout>