<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TrainingManagementActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbTrainingManagement"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#7E30E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/trainingmanagement"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbTrainingManagement">

        <LinearLayout
            android:id="@+id/btnTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/linearlayout_alphabet_custom"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="22dp"
            android:paddingBottom="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_management"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnQuestionTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/linearlayout_alphabet_custom"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="22dp"
            android:paddingBottom="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_management"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>