<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/a"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@android:color/transparent"
        android:rowCount="3"
        android:columnCount="2">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            android:id="@+id/cvTopPlayer"
            app:cardCornerRadius="8dp"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/bxh"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/top_player"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="16dp"
            android:id="@+id/cvTest"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tts"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/test"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:id="@+id/cvTraining"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:scaleType="fitXY"
                    android:layout_height="50dp"
                    android:src="@drawable/training"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/training"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/cvSearch"
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/search"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/search"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/cvMp3"
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/music"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/music"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            android:id="@+id/cvInfo"
            app:cardCornerRadius="8dp"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/info"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/info"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>

</LinearLayout>