<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a"
    tools:context=".activity.MenuTestActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbMenuTest"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#7E30E6"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/test"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbMenuTest">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="8dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/testSTT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="50dp"
                    android:src="@drawable/stt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaking_test"
                    android:textColor="#CC000000"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="8dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/testTTS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="50dp"
                    android:src="@drawable/manager"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listening_test"
                    android:textColor="#CC000000"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="8dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/statistics"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics"
                    android:textColor="#CC000000"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>